remove colorguard, fix imported bootstrap, add vendor's folder

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,6 +2,7 @@
 @import 'variables/base';
 @import 'bootfix/base';
 @import 'helpers/base';
+@import 'vendor/base';
 
 /* COMMON STYLES START */
 
@@ -10,6 +11,7 @@ body {
 }
 
 /* COMMON STYLES END */
+
 @import 'generated/base';
 @import 'blocks/base';
 @import 'pages/base';
