--- a/src/styles/bootfix/_base.scss
+++ b/src/styles/bootfix/_base.scss
@@ -7,12 +7,12 @@
 @import "../../../node_modules/bootstrap/scss/mixins";
 
 // optional files
-// @import "../../../node_modules/bootstrap/scss/root"; root variables
+// @import "../../../node_modules/bootstrap/scss/root"; // root variables
 @import "../../../node_modules/bootstrap/scss/reboot";
 @import "../../../node_modules/bootstrap/scss/grid";
 
 // components
-// @import "../../../node_modules/bootstrap/scss/alerts";
+// @import "../../../node_modules/bootstrap/scss/alert";
 // @import "../../../node_modules/bootstrap/scss/badge";
 // @import "../../../node_modules/bootstrap/scss/breadcrumb";
 // @import "../../../node_modules/bootstrap/scss/button-group";
@@ -22,10 +22,10 @@
 // @import "../../../node_modules/bootstrap/scss/close"; // close-icon
 // @import "../../../node_modules/bootstrap/scss/code";
 // @import "../../../node_modules/bootstrap/scss/custom-forms";
-// @import "../../../node_modules/bootstrap/scss/dropdowns";
+// @import "../../../node_modules/bootstrap/scss/dropdown";
 // @import "../../../node_modules/bootstrap/scss/forms";
 // @import "../../../node_modules/bootstrap/scss/images";
-// @import "../../../node_modules/bootstrap/scss/input-groups";
+// @import "../../../node_modules/bootstrap/scss/input-group";
 // @import "../../../node_modules/bootstrap/scss/jumbotron";
 // @import "../../../node_modules/bootstrap/scss/list-group";
 // @import "../../../node_modules/bootstrap/scss/media";
