--- a/src/pages/templates/layout.njk
+++ b/src/pages/templates/layout.njk
@@ -20,7 +20,8 @@
 
   {% block content %} {% endblock %}
 
-  <script src="js/bundle.js" charset="utf-8"></script>
+  <script src="js/vendor.js" charset="utf-8"></script>
+  <script src="js/main.js" charset="utf-8"></script>
 
 </body>
 
