integrate src files

--- a/src/styles/bootfix/_custom.scss
+++ b/src/styles/bootfix/_custom.scss
@@ -1,1 +1,6 @@
-
+@import 'components/type';
+@import 'components/code';
+@import 'components/tables';
+@import 'components/buttons';
+@import 'components/utilities';
+@import 'components/badge';
