--- a/src/styles/fonts/_roboto.scss
+++ b/src/styles/fonts/_roboto.scss
@@ -1,5 +1,5 @@
-// Example:
-// 
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500');
+
 // @font-face {
 // 	font-family: 'Proxima Nova';
 // 	src: local('Proxima Nova Regular'), local('ProximaNova-Regular'), local('Proxima Nova'), local('ProximaNova'), url('../assets/fonts/ProximaNova-Regular.woff') format('woff');
