--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,5 +1,427 @@
+{% import "partials/side-nav.njk" as nav %}
+{% import "partials/breadcrumbs.njk" as bc %}
+{% set site = datasets.get('site-map.json') %}
+
 {% extends "layout.njk" %}
 
 {% block content %}
+  <div class="dashboard">
+    <nav class="dashboard__nav">
+      {{ nav.make('dashboard', site) }}
+    </nav>
+
+    <div class="dashboard__content">
+      <div class="container-fluid">
+        <div class="row mb-2">
+          <div class="col-12">
+            <div class="dashboard__breadcrumbs">
+              {{ bc.make(['Bread', 'Crumbs']) }}
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 mb-1">
+            <h2 class="h1">Typography</h2>
+          </div>
+
+          <div class="col-4 mb-2">
+            <div class="box">
+              <h1>h1. heading</h1>
+              <h2>h2. heading</h2>
+              <h3>h3. heading</h3>
+              <h4>h4. heading</h4>
+              <h5>h5. heading</h5>
+              <h6>h6. heading</h6>
+            </div>
+          </div>
+
+          <div class="col-4 mb-2">
+            <div class="box">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-4 mb-2">
+            <div class="box">
+              <p>You can use the <code>&lt;mark&gt;</code> tag to <mark>highlight</mark> text.</p>
+              <p><u>This line of text will render as underlined</u> Use <code>&lt;u&gt;</code> tag.</p>
+              <p><small>This line of text is meant to be treated as fine print. Use  <code>&lt;small&gt;</code> tag.</small></p>
+              <p><strong>This line rendered as bold text.</strong> Use <code>&lt;strong&gt;</code> tag.</p>
+              <p><em>This line rendered as italicized text.</em> Use <code>&lt;em&gt;</code> tag.</p>
+            </div>
+          </div>
+
+          <div class="col-12">
+            <div class="box">
+              <div class="container-fluid">
+                <div class="row justify-content-between">
+                  <div class="col-6">
+                    <h2 class="h3"><code>.small</code> text example</h2>
+                    <p class="small">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+
+                    <h2 class="h3"><code>.large</code> text example</h2>
+                    <p class="large">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                  </div>
+
+                  <div class="col-6">
+                    <h2 class="h3">text example</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+
+                    <h2 class="h3">text example</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 mb-2 mt-4">
+            <h2 class="h1">Tables</h2>
+          </div>
+
+          <div class="col-12 mb-3">
+            <div class="box">
+              <h3 class="mb-3"><code>.table</code> example</h3>
+
+              <table class="table">
+                <thead>
+                  <tr class="table-row-no-delimiters">
+                    <th scope="col">Ингредиенты</th>
+                    <th scope="col">В начале</th>
+                    <th scope="col">Корректировка</th>
+                    <th scope="col">Поставка</th>
+                    <th scope="col">Расход</th>
+                    <th scope="col">Трансфер +</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+          <div class="col-6">
+            <div class="box">
+              <p>Place <code>&lt;table&gt;</code> inside <code>.box__container</code> to make it scrollable</p>
+              <p class="mb-3">Use <code>.text-nowrap</code> on <code>&lt;tr&gt;</code>/<code>&lt;td&gt;</code>/<code>&lt;th&gt;</code> to prevent line wrap</p>
+
+              <div class="box__container">
+                <table class="table">
+                  <thead>
+                    <tr class="text-nowrap">
+                      <th scope="col">Ингредиенты</th>
+                      <th scope="col">В начале</th>
+                      <th scope="col">Корректировка</th>
+                      <th scope="col">Поставка</th>
+                      <th scope="col">Расход</th>
+                      <th scope="col">Трансфер +</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-6">
+            <div class="box">
+              <p class="mb-2">Use <code>.small</code> and <code>.table-borderless</code> to make a compact table</p>
+
+              <div class="box__container mb-3">
+                <table class="table table-borderless small">
+                  <thead>
+                    <tr class="text-nowrap">
+                      <th scope="col">Ингредиенты</th>
+                      <th scope="col">В начале</th>
+                      <th scope="col">Корректировка</th>
+                      <th scope="col">Поставка</th>
+                      <th scope="col">Расход</th>
+                      <th scope="col">Трансфер +</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+              <p class="mb-2">Use <code>.table-no-delimiters</code> to take off tuples' separators</p>
+
+              <div class="box__container">
+                <table class="table table-no-delimiters small">
+                  <thead>
+                    <tr class="text-nowrap">
+                      <th scope="col">Ингредиенты</th>
+                      <th scope="col">В начале</th>
+                      <th scope="col">Корректировка</th>
+                      <th scope="col">Поставка</th>
+                      <th scope="col">Расход</th>
+                      <th scope="col">Трансфер +</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Вода</th>
+                      <td>19.0л</td>
+                      <td>0.0</td>
+                      <td>0 бут.</td>
+                      <td>0.0л</td>
+                      <td>0.0</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 mt-3 mb-3">
+            <div class="box">
+              <p>Use <code>.table-striped</code> to color each second line.</p>
+              <p>Use <code>.table-gutters-box</code> to make fluid table strictly inside a <code>.box</code> element.</p>
+              <p>Use <code>.table-hover</code> to make table's rows hoverable.</p>
+
+              <table class="table table-striped table-borderless table-gutters-box table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Ингредиенты</th>
+                    <th scope="col">В начале</th>
+                    <th scope="col">Корректировка</th>
+                    <th scope="col">Поставка</th>
+                    <th scope="col">Расход</th>
+                    <th scope="col">Трансфер +</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Вода</th>
+                    <td>19.0л</td>
+                    <td>0.0</td>
+                    <td>0 бут.</td>
+                    <td>0.0л</td>
+                    <td>0.0</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+          <div class="col-12 mb-2 mt-4">
+            <h2 class="h1">Buttons</h2>
+            <p>
+              <a href="#" class="btn">.btn</a>
+              <a href="#" class="btn btn-primary">.btn-primary</a>
+              <a href="#" class="btn btn-primary btn-rounded">.btn-rounded</a>
+              <a href="#" class="btn btn-primary btn-circled">.btn-circled</a>
+              <a href="#" class="btn btn-primary btn-w-auto">.btn-w-auto</a>
+              <a href="#" class="btn btn-outline-primary">.btn-outline-primary</a>
+              <a href="#" class="btn btn-secondary">.btn-outline-secondary</a>
+              <span class="d-inline-block bg-light p-2">
+                <a href="#" class="btn btn-outline-secondary">.btn-outline-secondary</a>
+              </span>
+            </p>
+          </div>
+
+          <div class="col-12 mb-3 mt-6">
+            <h2 class="h1 text-center">Forms and inputs</h2>
+          </div>
+
+
+          <div class="col-6 offset-3">
+            <form class="box pt-3">
+              <div class="form-group">
+                <label>Select inline</label>
+                <select class="selectpicker" data-style="btn-secondary">
+                  <option>Mustard</option>
+                  <option data-subtext="Heinz">Ketchup</option>
+                  <option>Relish</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label>Select block</label>
+                <select class="selectpicker form-control mb-2" data-style="btn-primary">
+                  <option>Primary</option>
+                  <option>Ketchup</option>
+                  <option>Relish</option>
+                </select>
+                <select class="selectpicker form-control mb-2" data-style="btn-outline-primary">
+                  <option>Primary Outline</option>
+                  <option>Ketchup</option>
+                  <option>Relish</option>
+                </select>
+                <select class="selectpicker form-control" data-style="btn-secondary">
+                  <option>Mustard</option>
+                  <option>Ketchup</option>
+                  <option>Relish</option>
+                </select>
+              </div>
+
+
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              </div>
+
+              <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              </div>
+
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              </div>
+
+              <div class="form-group text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+
+            </form>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
