--- a/src/pages/templates/layout.njk
+++ b/src/pages/templates/layout.njk
@@ -1,4 +1,4 @@
-{% set m = datasets.get('meta') %}
+{% set m = datasets.get('meta.json') %}
 
 <!doctype html>
 <html class="no-js" lang="{{ meta.lang }}">
@@ -21,6 +21,7 @@
   {% block content %} {% endblock %}
 
   <script src="js/vendor.js" charset="utf-8"></script>
+
   <script src="js/main.js" charset="utf-8"></script>
 
 </body>
