--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,17 +1,20 @@
-@import 'fonts';
+@import 'fonts/base';
+
 @import 'variables/base';
-@import 'bootfix/base';
+
 @import 'helpers/base';
+
+@import 'bootfix/base';
+
 @import 'vendor/base';
 
-/* COMMON STYLES START */
-
 body {
-
+  min-width: 1024px;
+  margin: 0;
 }
 
-/* COMMON STYLES END */
+@import 'generated/base.scss';
 
-@import 'generated/base';
-@import 'blocks/base';
-@import 'pages/base';
+@import 'blocks/base.scss';
+
+@import 'pages/base.scss';
