Revert "integrate src files"
This reverts commit 8cd0333604de513a19762403776c558421feed9e.

--- a/src/pages/templates/layout.njk
+++ b/src/pages/templates/layout.njk
@@ -1,4 +1,4 @@
-{% set m = datasets.get('meta.json') %}
+{% set m = datasets.get('meta') %}
 
 <!doctype html>
 <html class="no-js" lang="{{ meta.lang }}">
@@ -21,7 +21,6 @@
   {% block content %} {% endblock %}
 
   <script src="js/vendor.js" charset="utf-8"></script>
-
   <script src="js/main.js" charset="utf-8"></script>
 
 </body>
