--- a/src/pages/templates/lib/helpers.njk
+++ b/src/pages/templates/lib/helpers.njk
@@ -1,1 +1,1 @@
-{% macro parse( mods = false ) %}{% if mods %}{{ ' ' + mods }}{% else %}{{ '' }}{% endif %}{% endmacro %}
+{% macro hasMods( mods = false ) %}{% if mods %}{{ ' ' + mods }}{% else %}{{ '' }}{% endif %}{% endmacro %}
