--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500');
-
+// Example:
+// 
 // @font-face {
 // 	font-family: 'Proxima Nova';
 // 	src: local('Proxima Nova Regular'), local('ProximaNova-Regular'), local('Proxima Nova'), local('ProximaNova'), url('../assets/fonts/ProximaNova-Regular.woff') format('woff');
