--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,5 +1,9 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-
+<div class="container">
+    <div class="row">
+      <h1 class="col-12">Hi there!</h1>
+    </div>
+</div>
 {% endblock %}
