--- a/src/styles/bootfix/_base.scss
+++ b/src/styles/bootfix/_base.scss
@@ -9,7 +9,7 @@
 // optional files
 // @import "../../../node_modules/bootstrap/scss/root"; // root variables
 @import "../../../node_modules/bootstrap/scss/reboot";
-@import "../../../node_modules/bootstrap/scss/grid";
+// @import "../../../node_modules/bootstrap/scss/grid";
 
 // components
 // @import "../../../node_modules/bootstrap/scss/alert";
