--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,9 +1,31 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-      <h1 class="col-12">Hi there!</h1>
-    </div>
-</div>
+
+<main class="section section_view_hero hero">
+  <h1 class="hero__heading">
+    {% set letters = ['V', 'o', 'l', 'n', 'a'] %}
+
+    {% for letter in letters %}
+      <span>{{ letter }}</span>
+    {% endfor %}
+  </h1>
+
+  <div class="hero__features">
+    <ul>
+      {% set features = ['branding', 'filming', 'design'] %}
+
+      {% for feature in features %}
+      <li>
+        {% for letter in feature | list %}<span>{{ letter }}</span>{% endfor %}
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <address class="hero__address">
+    <a class="hero__address-link" href="mailto:welcome@volna.studio">welcome@volna.studio</a>
+  </address>
+</main>
+
 {% endblock %}
