--- a/src/pages/templates/layout.njk
+++ b/src/pages/templates/layout.njk
@@ -35,8 +35,8 @@
 
   {% block content %} {% endblock %}
 
-  <script src="js/vendor.js" charset="utf-8"></script>
-  <script src="js/main.js" charset="utf-8"></script>
+  {# <script src="js/vendor.js" charset="utf-8"></script> #}
+  {# <script src="js/main.js" charset="utf-8"></script> #}
 
 </body>
 
