--- a/src/pages/templates/layout.njk
+++ b/src/pages/templates/layout.njk
@@ -15,7 +15,7 @@
   <meta property="og:url" content="{{ m.og.url }}" />
   <meta property="og:site_name" content="{{ m.og.site_name }}" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="{{ m.og.url + '/assets/imgs/volna@1200x630.png' }}" />
+  <meta property="og:image" content="{{ m.og.url + '/assets/imgs/vln@1200x630.png' }}" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:description" content="{{ m.og.descr }}" />
