integrate fake3d solution

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -3,6 +3,13 @@
 {% block content %}
 
 <main class="section section_view_hero hero">
+  <div id="hero-canvas"
+  data-imageOriginal="/assets/imgs/section-hero-bg@2xl.jpg"
+	data-imageDepth="/assets/imgs/section-hero-bg-map@2xl.jpg"
+	data-horizontalThreshold="75"
+	data-verticalThreshold="75">
+
+  </div>
   <h1 class="hero__heading">
     {% set letters = ['V', 'o', 'l', 'n', 'a'] %}
 
