--- a/src/pages/templates/layout.njk
+++ b/src/pages/templates/layout.njk
@@ -38,6 +38,7 @@
   {% block content %} {% endblock %}
 
   {# <script src="js/vendor.js" charset="utf-8"></script> #}
+  <audio src="assets/audio/background-sound-default.mp3" loop autoplay></audio>
   <script src="js/main.js" charset="utf-8"></script>
 
 </body>
