--- a/src/styles/blocks/sections/_hero.scss
+++ b/src/styles/blocks/sections/_hero.scss
@@ -102,7 +102,7 @@
         &:after {
           position: absolute;
           top: 50%;
-          right: 0;
+          right: 1.5px;
 
           display: block;
 
